new system page add

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="nav--items">
 			<div class="nav--item">
 				<div class="nav--item-link">
-					<a href="./page/System.html" class="nav--link">
+					<a href="./page/Setting.html" class="nav--link">
 						<span class="nav--link-text" data-text="설치 & 로그인">설치 & 로그인</span>
 						<div class="nav--link-icon">
 							<svg class="icon">
@@ -43,7 +43,7 @@
 			</div>
 			<div class="nav--item">
 				<div class="nav--item-link">
-					<a href="#" class="nav--link">
+					<a href="./page/System.html" class="nav--link">
 						<span class="nav--link-text" data-text="시스템">시스템</span>
 						<div class="nav--link-icon">
 							<svg class="icon">
