media and System page add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
          재배생산 실행관리 시스템[:MES]</div>
     <div class='submenu'> Manufacturing Execution System </div>
     <div class='manual'>- 사용자 매뉴얼 -</div>
-    <img src="./img/MES.png" class="img-fluid" alt="...">
+
+	<img src="./img/sample.png" class="img-fluid" alt="..." style="width: 53rem; height: 32rem;">
+
     <img src="./img/logo.png" class="img-fluid">
 </div>
 
