--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'>
 <link rel="stylesheet" href="./style.css">
-<link rel="shortcut icon" type="image/x-icon" href="./ico/logo.ico" />
+<link rel="icon" type="image/x-icon" href="../ico/logo.ico" />
+
 
 </head>
 <body>
